# radiometers_esp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ltc2440.cpp  ltc2440.h  partitions.csv  sdkconfig  sdkconfig.ci  sdkconfig.defaults  test.ino
.github/workflows/: deploy.yml
components/app_core/: CMakeLists.txt  app_context.h  app_state.cpp  app_state.h  app_utils.h  hw_pins.h
components/config_loader/: CMakeLists.txt  config_loader.cpp  config_loader.h
components/data_logger/: CMakeLists.txt  data_logger.cpp
components/gps_module/: CMakeLists.txt  gps_module.cpp  gps_module.h  gps_unicore.cpp  gps_unicore.h
components/motion_controller/: CMakeLists.txt  motion_controller.cpp  motion_controller.h
components/network_manager/: CMakeLists.txt  network_manager.cpp  network_manager.h
components/sensor_hub/: CMakeLists.txt  onewire_m1820.cpp  onewire_m1820.h
components/storage_manager/: CMakeLists.txt  storage_manager.cpp  storage_manager.h
components/upload_pipeline/: CMakeLists.txt  sd_maintenance.cpp  sd_maintenance.h  upload_pipeline.cpp  upload_pipeline.h
components/wn90lp/: CMakeLists.txt  wn90lp.cpp  wn90lp.h
docs/: BUGS.md  CHANGELOG.md  WORKPLAN.md
infra/: .gitignore  BACKUPS.md  backup.env.example  compose-prod.yml  docker-compose.yml  example.env  mosquitto.conf  nginx.conf  s3-api.conf  s3-console.conf
infra/backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
infra/backend/alembic/: env.py  script.py.mako
infra/backend/app/: arq_worker.py  container.py  main.py  worker.py
infra/backend/tests/: test_app_import.py  (+8 more)
infra/frontend/: Dockerfile  README.md  app.vue  nuxt.config.ts  package.json
infra/scripts/: backup.sh  restore.sh
main/: CMakeLists.txt  app_main.cpp  app_services.h  app_state.cpp  app_state.h  app_utils.cpp  app_utils.h  config_loader.cpp  control_actions.cpp  control_actions.h  data_logger.cpp  data_logger.h  error_manager.cpp  error_manager.h  gps_module.cpp  gps_module.h  gps_unicore.cpp  gps_unicore.h  http_handlers.cpp  http_handlers.h  hw_pins.h  idf_component.yml  isrgrootx1.pem.h  ltc2440.cpp  ltc2440.h  motion_controller.cpp  motion_controller.h  mqtt_bridge.cpp  mqtt_bridge.h  network_manager.cpp  onewire_ds18b20.cpp  onewire_ds18b20.h  onewire_m1820.cpp  sd_maintenance.cpp  sd_maintenance.h  sensor_hub.cpp  sensor_hub.h  upload_pipeline.cpp  web_ui.cpp  web_ui.h  (+2 more)
tests/firmware/: Makefile  test_error_manager.cpp  test_sd_cleanup.cpp  test_utils.cpp
(+96 files in other folders)
